1.4.0

	- Added geos.h for quick inclusion

	- Added geos_version.h with version numbers and string defines

	- All geometry constructors take ownership of given arguments.
	  GeometryFactory provides pass-by-reference geometry creators
	  to take care of a deep-copy.

	- GeometryFactory::createMultiPoint(const CoordinateList *)
	  has been renamed to
	  GeometryFactory::createMultiPoint(const CoordinateList &)
	  to reflect copy semantic

	- GeometryFactory: EMPTY geometry creation do now have their
	  own constructors taking no arguments.