@@ -1,8 +1,7 @@
 1.4.0
 
-	- Added geos.h for quick inclusion
-
-	- Added geos_version.h with version numbers and string defines
+	- Added geos.h for quick inclusion. It will include geos/geom.h,
+	  new geos/version.h and geos/util.h (exceptions).
 
 	- All geometry constructors take ownership of given arguments.
 	  GeometryFactory provides pass-by-reference geometry creators
@@ -15,3 +14,10 @@
 
 	- GeometryFactory: EMPTY geometry creation do now have their
 	  own constructors taking no arguments.
+
+	- Geometry constructors taking PrecisionModel and SRID have
+	  been dropped. You have to use GeometryFactory instead.
+
+	- WKTWriter default constructor has been dropped. You need
+	  to initialize it with an explicit GeometryFactory
+
